--- a/SDL Game.vcxproj.filters
+++ b/SDL Game.vcxproj.filters
@@ -69,6 +69,9 @@
     <ClInclude Include="ModuleScene.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="ModuleTimer.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Main.cpp">
@@ -108,6 +111,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="ModuleScene.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="ModuleTimer.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
