--- a/SDL Game.vcxproj.filters
+++ b/SDL Game.vcxproj.filters
@@ -75,6 +75,9 @@
     <ClInclude Include="ModuleSceneIntro.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="ModuleEnemy.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Main.cpp">
@@ -120,6 +123,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="ModuleSceneIntro.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="ModuleEnemy.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
