--- a/SDL Game.vcxproj.filters
+++ b/SDL Game.vcxproj.filters
@@ -78,6 +78,9 @@
     <ClInclude Include="ModuleEnemy.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="ModuleLevel.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Main.cpp">
@@ -126,6 +129,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="ModuleEnemy.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="ModuleLevel.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
