--- a/SDL Game.vcxproj.filters
+++ b/SDL Game.vcxproj.filters
@@ -81,6 +81,9 @@
     <ClInclude Include="ModuleEnemy.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="ModulePowerUp.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Main.cpp">
