PowerUps ja apareixen

--- a/SDL Game.vcxproj.filters
+++ b/SDL Game.vcxproj.filters
@@ -137,5 +137,8 @@
     <ClCompile Include="ModuleEnemy.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="ModulePowerUp.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
