--- a/SDL Game.vcxproj.filters
+++ b/SDL Game.vcxproj.filters
@@ -81,6 +81,9 @@
     <ClInclude Include="ModuleEnemy.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="ModuleMap.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Main.cpp">
@@ -132,6 +135,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="ModuleEnemy.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="ModuleMap.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
