--- a/SDL Game.vcxproj
+++ b/SDL Game.vcxproj
@@ -73,6 +73,7 @@
     <ClInclude Include="Globals.h" />
     <ClInclude Include="ModuleBossEnemy.h" />
     <ClInclude Include="ModuleCollision.h" />
+    <ClInclude Include="ModuleCredits.h" />
     <ClInclude Include="ModuleEnemy.h" />
     <ClInclude Include="ModuleLevel.h" />
     <ClInclude Include="ModuleMap.h" />
@@ -101,6 +102,7 @@
     <ClCompile Include="ModuleAudio.cpp" />
     <ClCompile Include="ModuleBossEnemy.cpp" />
     <ClCompile Include="ModuleCollision.cpp" />
+    <ClCompile Include="ModuleCredits.cpp" />
     <ClCompile Include="ModuleEnemy.cpp" />
     <ClCompile Include="ModuleLevel.cpp" />
     <ClCompile Include="ModuleMap.cpp" />
