--- a/SDL Game.vcxproj.filters
+++ b/SDL Game.vcxproj.filters
@@ -23,6 +23,7 @@
     <ClCompile Include="ModuleWindow.cpp" />
     <ClCompile Include="ModulePowerUp.cpp" />
     <ClCompile Include="ModuleCredits.cpp" />
+    <ClCompile Include="SceneManager.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Animation.h" />
@@ -51,5 +52,6 @@
     <ClInclude Include="p2DynArray.h" />
     <ClInclude Include="p2Point.h" />
     <ClInclude Include="ModuleCredits.h" />
+    <ClInclude Include="SceneManager.h" />
   </ItemGroup>
 </Project>
